--- a/lib/mixins.styl
+++ b/lib/mixins.styl
@@ -1,4 +1,3 @@
-
 /**
  * Module dependencies
  */
@@ -21,10 +20,11 @@
  *   html {
  *     -webkit-transition: all 150ms linear;
  *     -moz-transition: all 150ms linear;
- *     -o-transition: all 150ms linear;
  *     transition: all 150ms linear;
  *   }
  *   ```
+ *
+ * @mixin
  */
 
 transition()
